--- a/Zen.Logging.csproj
+++ b/Zen.Logging.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <VersionPrefix>1.0.5-beta</VersionPrefix>
+    <VersionPrefix>1.0.3.1</VersionPrefix>
   </PropertyGroup>
 
   <ItemGroup>
