--- a/Zen.Logging.csproj
+++ b/Zen.Logging.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <VersionPrefix>1.0.6.4</VersionPrefix>
+    <VersionPrefix>1.0.7.1</VersionPrefix>
   </PropertyGroup>
 
   <PropertyGroup>
